...
    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/groups"
        android:title="Groups" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/portfolio"
        android:title="Account" />

</menu>

